make polling configurable per qa